-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.0
-
None
-
Windows
-
a8a6728a3f3f21d0e931800ff434e3d9ff654fb0 (dev, 18.6.2014, 5.4)
Qt 5 no longer contains QWindowsMime (at least publicly), so the reference to QWindowsMime in the documentation of QMimeData should be removed.
- relates to
-
QTBUG-39559 [REGRESSION] QWindowsMime public API removed
-
- Closed
-
| For Gerrit Dashboard: QTBUG-39558 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 87600,3 | Fix references to platform-specific handlers in QMimeData documentation. | dev | qt/qtbase | Status: MERGED | +2 | 0 |