Fix references to platform-specific handlers in QMimeData documentation.

Task-number: QTBUG-39558
Task-number: QTBUG-39559
Change-Id: I2634c5ac16f19251628228c9d60011a355846a79
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>